--- a/frontend/src/app/app.component.css
+++ b/frontend/src/app/app.component.css
@@ -1,1 +1,150 @@
 
+:host {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-size: 14px;
+  color: #333;
+  box-sizing: border-box;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+
+.body{}
+
+.toolbar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 60px;
+  display: flex;
+  align-items: center;
+  background-color: #ff8200;
+  color: white;
+  font-weight: 600;
+}
+
+.toolbar .text {
+  margin-left: 10px;
+  font-size: 1.3ch;
+}
+
+.toolbar .username {
+  font-size: 0.9ch;
+  position: fixed;
+  right: 10px;
+}
+
+.loginfield {
+  font-size: 2.4ch;
+  position: fixed;
+
+}
+.loginfield #loginwindow {
+  position: fixed;
+  right: 35%;
+  background-color: rgba(239, 238, 238, 0.97);
+  width: 30%;
+  height: 70%;
+  top: 20%;
+  border: 3px solid #ea7609;
+  border-radius: 40px 40px 40px 40px;
+}
+
+.loginfield #loginwindow p {
+  text-align: center;
+  font-size: 1.7em
+}
+
+.loginfield #loginwindow .txt_field{
+  position: relative;
+  top: 20%;
+  border-bottom: 2px solid #adadad;
+  margin: 50px 0;
+  margin-left: 30px;
+  margin-right: 30px;
+}
+
+/*Username and Password field*/
+.loginfield #loginwindow .txt_field input{
+  width: 100%;
+  padding:0 5px;
+  height: 40px;
+  font-size: 16px;
+  border: none;
+  background: none;
+  outline: none;
+}
+/*Username and Password label*/
+.loginfield #loginwindow .txt_field label{
+  position: absolute;
+  top: 50%;
+  left: 5px;
+  color: #adadad;
+  transform: translateY(-50%);
+  font-size: 16px;
+  pointer-events: none;
+  transition: .4s;
+}
+
+.loginfield #loginwindow .txt_field span::before{
+  content: "";
+  position: absolute;
+  top: 40px;
+  left: 0;
+  width: 0%;
+  height: 2px;
+  background: #2691d9;
+  transition: .4s;
+}
+
+
+.loginfield #loginwindow .txt_field input:focus~label,
+.loginfield #loginwindow input:valid ~label{
+  top: -5px;
+  color: #2691d9;
+}
+
+.loginfield #loginwindow .txt_field input:focus~span::before,
+.loginfield #loginwindow input:valid ~span::before{
+  width: 100%;
+}
+
+
+.loginfield #loginwindow .helpbutton{
+  position: relative;
+  top: 15%;
+  left: 5%;
+  color: #a6a6a6;
+  cursor: pointer;
+}
+.loginfield #loginwindow .helpbutton:hover{
+  text-decoration: underline;
+  color: #2691d9;
+}
+
+.loginfield #loginwindow input[type="submit"]{
+  position: absolute;
+  width: 80%;
+  height: 50px;
+  border: 1px solid;
+  background: #2691d9;
+  border-radius: 25px;
+  font-size: 18px;
+  color: #e9f4fb;
+  font-weight: 700;
+  cursor: pointer;
+  outline: none;
+  top: 80%;
+  left: 10%;
+}
+
+.loginfield #loginwindow input[type="submit"]:hover{
+  border-color: #ea7609;
+  border-width: 10px;
+  background: #ea7609;
+  transition: .5s;
+}
+
+
+
