--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,54 +1,15 @@
 
+
 <style>
-  :host {
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-    font-size: 14px;
-    color: #333;
-    box-sizing: border-box;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
+  .backgroundImage{
+    background-image: url('././assets/background-vote.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+    height: 100vh;
   }
-
-  .question{
-
-  }
-
-  .toolbar {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    height: 60px;
-    display: flex;
-    align-items: center;
-    background-color: #ff8200;
-    color: white;
-    font-weight: 600;
-  }
-
-  .toolbar .text {
-   margin-left: 10px;
-    font-size: 1.3ch;
-  }
-
-  .toolbar .loginfield {
-    font-size: 0.7ch;
-    position: fixed;
-    right: 10px;
-  }
-
-  .Info {
-    font-size: 1.7ch;
-    position: fixed;
-    top: 350px;
-    left: 400px;
-  }
-
-
-
-
-
 </style>
+
 <!-- Toolbar -->
 <div class="toolbar" role="banner">
 
@@ -56,18 +17,40 @@
   <h1> FHWS-VOTE</h1>
   </div>
 
-  <div class="loginfield" >
-    <h1> Log in</h1>
+  <div class="username" >
+    <h1> Lukas Mueller</h1>
   </div>
 
 </div>
 
-<div class="Info" >
-  <h1> Please close this window and don't visit this Side anymore!</h1>
-  <question>
-  </question>
+
+
+<div class="body">
+  <div class="backgroundImage"></div>
+<!-- Loginwindow -->
+<div class="loginfield" >
+
+  <div id="loginwindow">
+    <p>Login to your account</p>
+    <div class="txt_field">
+      <input type="text" required>
+      <span></span>
+      <label>Username</label>
+    </div>
+    <div class="txt_field">
+      <input type="password" required>
+      <span></span>
+      <label>Password</label>
+    </div>
+    <div class="helpbutton"> Need help?</div>
+    <input type="submit" value="Login">
+  </div>
+
 </div>
 
+<router-outlet></router-outlet>
 
+<question>
+</question>
 
-
+</div>
