Basic implementation of VoteList and Vote -.component

--- a/frontend/src/lib/mainmenu/mainmenu.component.html
+++ b/frontend/src/lib/mainmenu/mainmenu.component.html
@@ -5,8 +5,14 @@
   <title>main</title>
 </head>
 <body>
-<div class="Info" >
-  <h1> Please close this window and don't visit this Side anymore!</h1>
+<div class="listwindow">
+  Your Votes
+
+
+</div>
+
+<div class="newlistButton">
+  add Vote
 </div>
 
 </body>
