--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,7 +1,7 @@
 
 
 <style>
-  .backgroundImage{
+  .body{
     background-image: url('././assets/background-vote.jpg');
     background-size: cover;
     background-repeat: no-repeat;
@@ -26,7 +26,7 @@
 
 
 <div class="body">
-  <div class="backgroundImage"></div>
+
 <!-- Loginwindow -->
 <div class="loginfield" >
 
@@ -48,9 +48,12 @@
 
 </div>
 
-<router-outlet></router-outlet>
+<router-outlet>
 
-<question>
-</question>
+  <question>
+  </question>
+
+</router-outlet>
+
 
 </div>
