refactoring, some routing functionality

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,13 +1,7 @@
 
 
 <style>
-  .body{
-    background-image: url('././assets/background-vote.jpg');
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center center;
-    height: 100vh;
-  }
+
 </style>
 
 <!-- Toolbar -->
@@ -24,36 +18,7 @@
 </div>
 
 
-
-<div class="body">
-
-<!-- Loginwindow -->
-<div class="loginfield" >
-
-  <div id="loginwindow">
-    <p>Login to your account</p>
-    <div class="txt_field">
-      <input type="text" required>
-      <span></span>
-      <label>Username</label>
-    </div>
-    <div class="txt_field">
-      <input type="password" required>
-      <span></span>
-      <label>Password</label>
-    </div>
-    <div class="helpbutton"> Need help?</div>
-    <input type="submit" value="Login">
-  </div>
-
-</div>
-
-<router-outlet>
-
-  <question>
-  </question>
-
-</router-outlet>
+<router-outlet></router-outlet>
 
 
-</div>
+
