--- a/frontend/src/lib/mainmenu/mainmenu.component.html
+++ b/frontend/src/lib/mainmenu/mainmenu.component.html
@@ -12,6 +12,7 @@
 </div>
 
 <div class="newlistButton">
+  <img class="addButton" src="../../assets/addButton.png" routerLink="/editor"/>
   add Vote
 </div>
 
