--- a/frontend/src/lib/login/login.component.html
+++ b/frontend/src/lib/login/login.component.html
@@ -1,10 +1,31 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <title>login</title>
 </head>
-<body>
+<body> -->
+  <div class="body">
 
-</body>
-</html>
+    <!-- Loginwindow -->
+    <div class="loginfield" >
+
+      <div id="loginwindow">
+        <p>Login to your account</p>
+        <div class="txt_field">
+          <input type="text" required>
+          <span></span>
+          <label>Username</label>
+        </div>
+        <div class="txt_field">
+          <input type="password" required>
+          <span></span>
+          <label>Password</label>
+        </div>
+        <div class="helpbutton"> Need help?</div>
+        <input type="submit" value="Login">
+      </div>
+
+    </div>
+<!-- </body>
+</html> -->
