--- a/frontend/src/lib/mainmenu/mainmenu.component.css
+++ b/frontend/src/lib/mainmenu/mainmenu.component.css
@@ -30,5 +30,19 @@
   bottom: 5%;
   border: 3px solid #ea7609;
   border-radius: 10px 10px 10px 10px;
+  align-items:flex-end;
 
+}
+
+
+
+
+.addButton {
+  height: 0px;
+  align-items: center;
+  border-radius: 10px;
+  background-color: transparent;
+  margin-left: 40px;
+  margin-right: 55px;
+  margin-top: 10px;
 }
