first testobjects of Vote in VoteContainer

--- a/frontend/src/lib/voteListModule/vote/vote.component.html
+++ b/frontend/src/lib/voteListModule/vote/vote.component.html
@@ -5,17 +5,12 @@
   <title>$Title$</title>
 </head>
 <body>
-
-
-
-
 <div class="vote" (click)="showVoteResult()">
-  <div id="delete" title="DELETE LIST" (click)="deletethisVote()" >
-    <input type="image" src="../.././../../assets/trashcan.png" width="15vw" height="15vw">
-  </div>
-
   <div id = "name" title = "VOTE NAME">{{showVoteName()}}</div>
   <div id = "lifetime" title = "VOTE LIFETIME">{{showVoteLifetime()}}</div>
+  <div id="delete" title="DELETE VOTE" (click)="deletethisVote()" >
+    <input type="image" src="../../frontend/src/assets/trashcan.png" width="15vw" height="15vw">
+  </div>
 
 </div>
 
