--- a/frontend/src/lib/voteListModule/votecontainer/voteContainer.component.html
+++ b/frontend/src/lib/voteListModule/votecontainer/voteContainer.component.html
@@ -5,6 +5,14 @@
   <title>$Title$</title>
 </head>
 
+<div class="containerHeader">
+  <div id = "name" title = "NAME"> Name</div>
+  <div id = "lifetime" title = "LIFETIME">Lifetime</div>
+
+
+
+
+</div>
 
 <div id="body">
   <ul>
