new Desing for mainsite and implement first functions of mainsite

--- a/frontend/src/lib/mainmenu/mainmenu.component.html
+++ b/frontend/src/lib/mainmenu/mainmenu.component.html
@@ -9,13 +9,10 @@
   Your Votes
 
   <voteContainer></voteContainer>
-
-
 </div>
 
-<div class="newlistButton">
-  <img class="addButton" src="../../assets/addButton.png" routerLink="/editor"/>
-  add Vote
+<div class="newVoteButton">
+  <input type="image" src="../../assets/newVote_btn.png" width="125%" height="125%" routerLink="/editor"/>
 </div>
 
 </body>
