--- a/frontend/src/lib/voteListModule/votecontainer/voteContainer.component.html
+++ b/frontend/src/lib/voteListModule/votecontainer/voteContainer.component.html
@@ -5,13 +5,10 @@
   <title>$Title$</title>
 </head>
 
+<div class="voteContainer">
 <div class="containerHeader">
   <div id = "name" title = "NAME"> Name</div>
   <div id = "lifetime" title = "LIFETIME">Lifetime</div>
-
-
-
-
 </div>
 
 <div id="body">
@@ -23,7 +20,7 @@
   </ul>
 </div>
 
-
+</div>
 
 
 
