--- a/frontend/src/lib/mainmenu/mainmenu.component.css
+++ b/frontend/src/lib/mainmenu/mainmenu.component.css
@@ -19,17 +19,14 @@
   border-radius: 40px 40px 40px 40px;
 }
 
-.newlistButton {
+.newVoteButton {
   text-align: center;
-  font-size: 8px;
-  position: fixed;
+  position: absolute;
   right: 5%;
-  background-color: rgba(239, 238, 238, 1);
   width: 7%;
   height: 7%;
   bottom: 5%;
-  border: 3px solid #ea7609;
-  border-radius: 10px 10px 10px 10px;
+
   align-items:flex-end;
 
 }
