--- a/frontend/src/lib/voteListModule/vote/vote.component.css
+++ b/frontend/src/lib/voteListModule/vote/vote.component.css
@@ -8,22 +8,32 @@
   align-items: center;
   border-radius: 5px;
   transition: box-shadow 0.1s;
-  margin-bottom: 10px;
 }
-
 .vote #name{
+  color: black;
   position: absolute;
   left: 2%;
 
 }
 .vote #lifetime{
+  font-size: 60%;
   position: absolute;
   left: 50%;
-  color: #b21a1a;
+  color: #ffffff;
+  border-radius: 10px 10px 10px 10px;
+  background-color: #5bcb36;
 
 }
 .vote #delete{
   position: absolute;
   right: 2%;
+}
 
+.vote:hover {
+  background-color: #ff8200;
+
+}
+.vote #delete:hover{
+  transform: scaleX(115%);
+  transform: rotate(-20deg);
 }
