--- a/frontend/src/lib/voteListModule/vote/vote.component.html
+++ b/frontend/src/lib/voteListModule/vote/vote.component.html
@@ -9,7 +9,7 @@
   <div id = "name" title = "VOTE NAME">{{showVoteName()}}</div>
   <div id = "lifetime" title = "VOTE LIFETIME">{{showVoteLifetime()}}</div>
   <div id="delete" title="DELETE VOTE" (click)="deletethisVote()" >
-    <input type="image" src="../../frontend/src/assets/trashcan.png" width="15vw" height="15vw">
+    <input type="image" src="../../../assets/deleteButton.png" width="30%" height="30%">
   </div>
 
 </div>
