--- a/frontend/src/lib/voteListModule/vote/vote.component.css
+++ b/frontend/src/lib/voteListModule/vote/vote.component.css
@@ -15,14 +15,21 @@
   left: 2%;
 
 }
-.vote #lifetime{
+.vote .lifetimecomponent #lifetime{
   font-size: 60%;
   position: absolute;
-  left: 50%;
   color: #ffffff;
+  text-align: left;
+  left: 10%;
+}
+
+.vote .lifetimecomponent{
+  position: absolute;
+  left: 50%;
+  height: 45%;
+  width: 13%;
   border-radius: 10px 10px 10px 10px;
   background-color: #5bcb36;
-
 }
 .vote #delete{
   position: absolute;
