--- a/frontend/src/lib/voteListModule/vote/vote.component.html
+++ b/frontend/src/lib/voteListModule/vote/vote.component.html
@@ -7,7 +7,9 @@
 <body>
 <div class="vote" (click)="showVoteResult()">
   <div id = "name" title = "VOTE NAME">{{showVoteName()}}</div>
+  <div class="lifetimecomponent">
   <div id = "lifetime" title = "VOTE LIFETIME">{{showVoteLifetime()}}</div>
+  </div>
   <div id="delete" title="DELETE VOTE" (click)="deletethisVote()" >
     <input type="image" src="../../../assets/deleteButton.png" width="30%" height="30%">
   </div>
