create helpwindow + edit mainmenu

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -11,7 +11,7 @@
   <h1> FHWS-VOTE</h1>
   </div>
   <div class="username">
-    <h1> Lukas Mueller</h1>
+    <h1> {{getusername()}}</h1>
 
   </div>
 
