--- a/frontend/src/lib/mainmenu/mainmenu.component.html
+++ b/frontend/src/lib/mainmenu/mainmenu.component.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <div class="listwindow">
-  Your Votes
+  <div class="headline">Your Votes</div>
 
   <voteContainer></voteContainer>
 </div>
