--- a/frontend/src/lib/login/login.component.css
+++ b/frontend/src/lib/login/login.component.css
@@ -14,6 +14,59 @@
   border-radius: 40px 40px 40px 40px;
 }
 
+ .helpwindow{
+   text-align: center;
+  position: fixed;
+  right: 40%;
+  background-color: rgba(239, 238, 238, 1);
+  width: 20%;
+  height: 15%;
+  top: 40%;
+  color: black;
+  border: 3px solid #ff8200;
+  border-radius: 40px 40px 40px 40px;
+}
+
+ .helpwindow .headline{
+   left: 30%;
+   height: 20%;
+   background: #ff8200;
+   border-radius: 40px 40px 0px 0px;
+   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+   color: white;
+   font-weight: 600;
+ }
+
+
+ .helpwindow .okaybutton{
+   position: absolute;
+   text-align: center;
+   color: white;
+   font-weight: 700;
+   bottom: 10%;
+   right: 10%;
+   width: 20%;
+   height: 15%;
+   background: #2691d9;
+   border-radius: 25px;
+   border-radius: 40px 40px 40px 40px;
+ }
+
+ .helpwindow .okaybutton:hover{
+   background: #ff8200;
+   transition: .5s;
+ }
+ .helpwindow .infotext{
+
+   font-size: 130%;
+   margin-left: 20px;
+   width: 80%;
+   height: 15%;
+   top: 36%;
+
+ }
+
+
 .loginfield #loginwindow p {
   text-align: center;
   font-size: 1.7em
@@ -75,8 +128,8 @@
 
 
 .loginfield #loginwindow .helpbutton{
-  position: relative;
-  top: 15%;
+  position: absolute;
+  bottom: 37%;
   left: 5%;
   color: #a6a6a6;
   cursor: pointer;
