--- a/frontend/src/lib/editor/editor.component.scss
+++ b/frontend/src/lib/editor/editor.component.scss
@@ -1,112 +1,111 @@
-.container {
-  // width: 100%;
-  // height: 100%;
-  background-color: rgba(220, 221, 220, 0.685);
-  // border: 3px solid rgb(0, 0, 0);
-  border-radius: 10px;
-  padding: 100px 20px;
-  display: flex;
-  flex: 1;
-  // flex-direction: column;
-  justify-content: left;
-  align-items: flex-start;
-  overflow: hidden;
-  min-height: 700px;
-  min-width: 1300px;
+.Info{
+  top: 50%;
+  color: red;
+}
+.body{
+  color: white;
 }
 
-.main {
-  display: flex;
-  flex: 1;
-  flex-direction: row;
-  justify-content: left;
-  align-items: flex-start;
+.listwindow  {
+  text-align: center;
+  font-size: 40px;
+  position: fixed;
+  left:30%;
+  background-color: rgba(239, 238, 238, 1);
+  width: 50%;
+  height: 25%;
+  top: 15%;
+  border: 3px solid #ea7609;
+  border-radius: 40px 40px 40px 40px;
+  align-items: flex-end;
 }
-
-.listsContainer {
-  display: flex;
-  flex: 1;
-  flex-direction: row;
-  justify-content: left;
-  align-items: flex-start;
-}
-.addButtonContainer {
-  height: 30px;
-  width: 30px;
+.sidebar{
+  text-align: center;
+  font-size: 30px;
+  position: fixed;
+  left:2%;
+  background-color: rgba(239, 238, 238, 1);
+  width: 20%;
+  height: 80%;
+  top: 15%;
+  border: 3px solid #ea7609;
+  border-radius: 40px 40px 40px 40px;
   align-items: center;
 }
-.arrow {
+
+
+.newVoteButton {
+  text-align: center;
+  position: absolute;
+  right: 5%;
+  width: 7%;
+  height: 7%;
+  bottom: 5%;
+
+  align-items:flex-end;
+
+}
+
+.nameinputfield{
+  text-align: center;
+  font-size: 20px;
+  margin-top: 50px;
+  margin-left: 100px;
+  margin-right: 100px;
+  background-color: rgba(239, 238, 238, 1);
+  width: 400px;
   height: 20px;
-  width: auto;
-}
-.list {
-  list-style: none;
-}
-.side {
-  background-color: rgb(201, 201, 201);
-  width: auto;
-  height: auto;
-  min-width: 300px;
-  min-height: 500px;
-  border-radius: 10px;
-  align-items: center;
-  vertical-align: middle;
-  color: black;
-  font-size: large;
-  padding-left: 30px;
-  padding-bottom: 20px;
-  padding-top: 10px;
-}
-.nameList {
-  background-color: rgb(201, 201, 201);
-  width: auto;
-  height: auto;
-  min-width: 100px;
-  min-height: 420px;
-  margin-right: 20px;
-  border-radius: 10px;
-  color: black;
-  font-size: large;
-  font-weight: 400;
+  //top: 15%;
+  border-radius: 40px 40px 40px 40px;
 }
 
-.buttons {
-  font-size: x-large;
-  font-weight: 600;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  min-height: 40px;
-  min-width: 100px;
-  border-radius: 10px;
-  background-color: transparent;
-  margin-left: 40px;
-}
-.flagButton {
-  font-size: x-large;
-  font-weight: 600;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  min-height: 40px;
-  min-width: 100px;
-  border-radius: 10px;
-  background-color: whitesmoke;
-}
+
 .addButton {
-  font-size: x-large;
-  font-weight: 600;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  min-height: 30px;
-  min-width: 150px;
+  height: 0px;
   align-items: center;
   border-radius: 10px;
   background-color: transparent;
   margin-left: 40px;
   margin-right: 55px;
+  margin-top: 10px;
 }
-.input {
-  background-color: whitesmoke;
-  border-color: rgb(43, 43, 43);
-  border-width: 2px;
+
+.label{
+  font-size: 20px;
+  position: center;
+  font-weight: bold;
+}
+
+.inputfield{
+  margin-left: 40px;
+  font-size: 15px;
+  height: 20px;
   width: 200px;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  font-size: x-large;
-  font-weight: 600;
+  border-radius: 40px 40px 40px 40px;
+  border: 3px solid #ea7609;
+
+
 }
+.questionlist{
+  background-color: rgba(239, 238, 238, 1);
+  list-style: none;
+  align-items: flex-start;
+}
+.questioneditor{
+  background-color: rgba(239, 238, 238, 1);
+  list-style: none;
+}
+.questiontitle{
+  background-color: transparent;
+  font-size: 25px;
+  font-weight: bold;
+  border: 3px solid #ea7609;
+  border-radius: 40px 40px 40px 40px;
+  text-align: center;
+  margin-top: 10px;
+  margin-right: 10px;
+  cursor: pointer;
+  width: auto;
+  height: auto;
+}
+
