add set of Buttons

--- a/frontend/src/lib/editor/editor.component.html
+++ b/frontend/src/lib/editor/editor.component.html
@@ -29,7 +29,7 @@
 </div>
 
 <div class="newVoteButton">
-  <input type="image" src="../../assets/newVote_btn.png" width="125%" height="125%" (click)="addEmptyQuestion()"/>
+  <input type="image" src="../../assets/addQuestion_btn.png" width="125%" height="125%" (click)="addEmptyQuestion()"/>
 </div>
 
 </body>
