add (add Admin) and (delete Admin) Function for Sys-Admins + different color for lifetime status + usericon

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -10,9 +10,12 @@
   <div class="text" >
   <h1> FHWS-VOTE</h1>
   </div>
+
   <div class="username">
     <h1> {{getusername()}}</h1>
-
+  </div>
+  <div class="usericon">
+  <input type="image" src="../assets/user_icon2.png" width="40%" height="40%">
   </div>
 
 </div>
