--- a/frontend/src/app/app.component.css
+++ b/frontend/src/app/app.component.css
@@ -27,12 +27,13 @@
   font-size: 1.3ch;
 }
 
-.toolbar .username {
+.toolbar .username {;
   font-size: 0.9ch;
   position: fixed;
-  right: 10px;
+  right: 1%;
 }
-.toolbar .usericon {
+.toolbar .username .usericon {
   position: fixed;
-  left: 84%;
+  top: -2%;
+  right: 0.1%;
 }
