--- a/frontend/src/lib/router/survey/survey.component.css
+++ b/frontend/src/lib/router/survey/survey.component.css
@@ -1,6 +1,7 @@
 *{
   text-align: center;
   align-items: center;
+  position: relative;
 }
 
 #head{
@@ -8,7 +9,7 @@
   font-size: 15px;
   width: 20vw;
   display: block;
-  margin-top: 7vh;
+  margin-top: 10vh;
   margin-left: auto;
   margin-right: auto;
 
@@ -17,14 +18,17 @@
 }
 
 #body{
-  position: absolute;
+
     font-size: 40px;
     display: block;
-    right: 15%;
-    background-color: rgba(239, 238, 238, 1);
-    width: 70%;
-    height:100%;
-    top: 15%;
+    width: 150vh;
+    display: block;
+    background-color: #eee;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: white;
+    height: auto;
+    margin-top: 5vh;
     border: 3px solid #ff8200;
     border-radius: 40px 40px 40px 40px;
 
@@ -39,5 +43,7 @@
   color: white;
   border-radius: 40px 40px 40px 40px;
   width: 5vw;
-  bottom: 6vh;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 1vh;
 }
