editor functionalities added

--- a/frontend/src/lib/question/question.component.css
+++ b/frontend/src/lib/question/question.component.css
@@ -1,4 +1,4 @@
-.container {
+.questionContainer {
   background-color: transparent;
   font-size: 25px;
   font-weight: bold;
@@ -18,36 +18,60 @@
   height: auto;
   border-color: transparent;
 }
-.answer-selector input{
-  margin:0;padding:0;
-  -webkit-appearance:none;
-  -moz-appearance:none;
-  appearance:none;
-}
-.yesNo{background-image:url('../../assets/yesNo_button.png');}
-.fixed{background-image:url('../../assets/fixedAnswers_button.png');}
+/*.answer-selector input{*/
+/*  margin:0;padding:0;*/
+/*  -webkit-appearance:none;*/
+/*  -moz-appearance:none;*/
+/*  appearance:none;*/
+/*}*/
+/*.yesNo{background-image:url('../../assets/yesNo_button.png');}*/
+/*.fixed{background-image:url('../../assets/fixedAnswers_button.png');}*/
 
-.answer-selector input:active +.answerbutton{opacity: .9;}
-.answer-selector input:checked +.answerbutton{
+/*.answer-selector input:active +.answerbutton{opacity: .9;}*/
+/*.answer-selector input:checked +.answerbutton{*/
+/*  -webkit-filter: none;*/
+/*  -moz-filter: none;*/
+/*  filter: none;*/
+/*}*/
+/*.answerbutton{*/
+/*  cursor:pointer;*/
+/*  background-size:contain;*/
+/*  background-repeat:no-repeat;*/
+/*  display:inline-block;*/
+/*  width:100px;height:70px;*/
+/*  -webkit-transition: all 100ms ease-in;*/
+/*  -moz-transition: all 100ms ease-in;*/
+/*  transition: all 100ms ease-in;*/
+/*  -webkit-filter: brightness(1.8) grayscale(1) opacity(.7);*/
+/*  -moz-filter: brightness(1.8) grayscale(1) opacity(.7);*/
+/*  filter: brightness(1.8) grayscale(1) opacity(.7);*/
+/*}*/
+/*.answerbutton:hover{*/
+/*  -webkit-filter: brightness(1.2) grayscale(.5) opacity(.9);*/
+/*  -moz-filter: brightness(1.2) grayscale(.5) opacity(.9);*/
+/*  filter: brightness(1.2) grayscale(.5) opacity(.9);*/
+/*}*/
+.answerTypeButton{
+  margin-left: 5px;
+  margin-right: 5px;
+    -webkit-filter: brightness(1.2) grayscale(.5) opacity(.9);
+    -moz-filter: brightness(1.2) grayscale(.5) opacity(.9);
+    filter: brightness(1.2) grayscale(.5) opacity(.9);
+}
+.answerlist{
+  list-style: none;
+  align-items: center;
+}
+.answerstyle{
+  font-size: 20px;
+  border: 3px solid #ea7609;
+  border-radius: 40px 40px 40px 40px;
+}
+
+input[id=yesNo]:checked {
+  margin-left: 5px;
+  margin-right: 5px;
   -webkit-filter: none;
   -moz-filter: none;
   filter: none;
-}
-.answerbutton{
-  cursor:pointer;
-  background-size:contain;
-  background-repeat:no-repeat;
-  display:inline-block;
-  width:100px;height:70px;
-  -webkit-transition: all 100ms ease-in;
-  -moz-transition: all 100ms ease-in;
-  transition: all 100ms ease-in;
-  -webkit-filter: brightness(1.8) grayscale(1) opacity(.7);
-  -moz-filter: brightness(1.8) grayscale(1) opacity(.7);
-  filter: brightness(1.8) grayscale(1) opacity(.7);
-}
-.answerbutton:hover{
-  -webkit-filter: brightness(1.2) grayscale(.5) opacity(.9);
-  -moz-filter: brightness(1.2) grayscale(.5) opacity(.9);
-  filter: brightness(1.2) grayscale(.5) opacity(.9);
 }
