--- a/frontend/src/lib/question/question.component.html
+++ b/frontend/src/lib/question/question.component.html
@@ -1,11 +1,24 @@
-<div class="container">
+<div class="questionContainer">
 <input class="questiontitle" type="text" [(ngModel)]="this.question.title" />
   <form>
   <div>
-      <input class="radio" type="radio" (click)="this.chooseYesNoAnswer()" id="yesNo" value="yesNo">
+      <input type="image" src="../../assets/yesNo_btn.png" (click)="this.chooseYesNoAnswer()" id="yesNo" value="yesNo" class="answerTypeButton" alt="Choose Yes/No Answers">
     <label class="answerbutton yesNo" for="yesNo"></label>
-      <input class="radio" type="radio" (click)="this.chooseFixedAnswers()" id="fixed" value="fixed">
+    <input type="image" src="../../assets/fixedAnswers_btn.png" (click)="this.chooseFixedAnswers()" id="fixed" value="fixed" class="answerTypeButton" alt="Choose fixed Answers"/>
       <label class="answerbutton fixed" for="fixed"></label>
+    <input type="image" src="../../assets/individualAnswer_btn.png" (click)="this.chooseIndividualAnswers()" id="individual" value="individual" class="answerTypeButton" alt="Choose individual Answers">
+    <label class="answerbutton fixed" for="individual"></label>
   </div>
   </form>
+  <div *ngIf="this.fixedAnswers" class="questionwindow">
+    <ul class="answerlist">
+      <li *ngFor="let answer of this.question.fixedAnswers" class="answerstyle">
+        {{answer}}
+        <img src="../../../assets/deleteButton.png" width="20px" (click)="this.deleteAnswer(answer)">
+      </li>
+      <label class="label" for="answerInput">Enter an answer:</label>
+      <input type="text" class="inputfield" id="answerInput" [(ngModel)]="this.tempAnswer">
+    </ul>
+    <img src="../../assets/addButton.png" width="40px" (click)="this.addAnswer()"/>
+  </div>
 </div>
