--- a/frontend/src/lib/router/editor/editor.component.scss
+++ b/frontend/src/lib/router/editor/editor.component.scss
@@ -6,11 +6,11 @@
   color: white;
 }
 
-.listwindow  {
+.questionwindow  {
   text-align: center;
   font-size: 40px;
   position: fixed;
-  left:30%;
+  left:40%;
   background-color: rgba(239, 238, 238, 1);
   width: 50%;
   height: 25%;
@@ -25,7 +25,7 @@
   position: fixed;
   left:2%;
   background-color: rgba(239, 238, 238, 1);
-  width: 20%;
+  width: 30%;
   height: 80%;
   top: 15%;
   border: 3px solid #ea7609;
@@ -34,13 +34,25 @@
 }
 
 
-.newVoteButton {
+.nextButton {
   text-align: center;
   position: absolute;
   right: 5%;
   width: 7%;
   height: 7%;
   bottom: 5%;
+
+  align-items:flex-end;
+
+}
+
+ .newQuestionButton{
+  text-align: center;
+  position: absolute;
+  right: 5%;
+  width: 7%;
+  height: 7%;
+  bottom: 15%;
 
   align-items:flex-end;
 
@@ -108,4 +120,20 @@
   width: auto;
   height: auto;
 }
-
+.emaillist{
+  list-style: none;
+  align-items: center;
+}
+.emailstyle{
+  font-size: 20px;
+  border: 3px solid #ea7609;
+  border-radius: 40px 40px 40px 40px;
+}
+.returnToMainButton{
+  text-align: center;
+  position: absolute;
+  right: 5%;
+  width: 7%;
+  height: 7%;
+  bottom: 25%;
+}
