implement changepassword menu + bugfix on inputfields

--- a/frontend/src/lib/router/mainmenu/mainmenu.component.html
+++ b/frontend/src/lib/router/mainmenu/mainmenu.component.html
@@ -5,13 +5,20 @@
   <title>main</title>
 </head>
 <body>
-<div class="taskbar" *ngIf="isAdmin">
+<div class="taskbar">
+  <div class="changePasswordButton">
+    <input type="image" src="../../assets/changePassword_btn.png" width="50%" height="50%"(click)="showChangePassword()" />
+  </div>
+
+  <div class="sysadminfunctions" *ngIf="isAdmin">
   <div class="addAdminButton">
     <input type="image" src="../../assets/addAdmin_btn.png" width="50%" height="50%"(click)="showAddAdmin()" />
   </div>
 
   <div class="deleteAdminButton">
     <input type="image" src="../../assets/deleteAdmin_btn.png" width="50%" height="50%"(click)="showDeleteAdmin()" />
+  </div>
+
   </div>
 </div>
 
@@ -73,6 +80,31 @@
     <div class="cancel_txt">Cancel</div>
   </div>
 </div>
+
+
+<div class="changePassword" *ngIf="changePassword">
+  <div class="headline">Change Password</div>
+
+  <div class="txt_field">
+    <input type="text" required
+           [value]="this.changedPassword"
+           (change)="setnewPassword($event)"
+    >
+    <span></span>
+    <label>New Password</label>
+  </div>
+
+  <div class="change" (click)="sendChangePasswordrequest()">
+    <div class="change_txt">Change</div>
+  </div>
+  <div class="cancel" (click)="hideChangePassword()">
+    <div class="cancel_txt">Cancel</div>
+  </div>
+</div>
+
+
+
+
 
 
 
