--- a/frontend/src/lib/router/mainmenu/mainmenu.component.css
+++ b/frontend/src/lib/router/mainmenu/mainmenu.component.css
@@ -100,10 +100,10 @@
 }
 
 
-.adminGenerator.txt_field span::before{
+.adminGenerator .txt_field span::before{
   content: "";
   position: absolute;
-  top: 40px;
+  top: 54px;
   left: 0;
   width: 0%;
   height: 2px;
@@ -180,16 +180,23 @@
   font-weight: 700;
   left: 12%;
 }
-.taskbar .addAdminButton{
+
+.taskbar .changePasswordButton{
   position: fixed;
   left: 15%;
+  top: 0%;
+
+}
+.taskbar .addAdminButton{
+  position: fixed;
+  left: 25%;
   top: 0%;
 
 }
 
 .taskbar .deleteAdminButton{
   position: fixed;
-  left: 25%;
+  left: 35%;
   top: 0%;
 
 }
@@ -249,10 +256,10 @@
 }
 
 
-.deleteAdmin.txt_field span::before{
+.deleteAdmin .txt_field span::before{
   content: "";
   position: absolute;
-  top: 40px;
+  top: 54px;
   left: 0;
   width: 0%;
   height: 2px;
@@ -319,3 +326,131 @@
   transition: .5s;
 }
 /*DELETE WINDOW*/
+
+
+
+
+
+
+
+
+
+/*ChangePassword WINDOW*/
+.changePassword{
+  text-align: center;
+  font-size: 40px;
+  position: fixed;
+  right: 32.5%;
+  background-color: rgba(239, 238, 238, 1);
+  width: 35%;
+  height: 30%;
+  top: 25%;
+  border: 3px solid #ff8200;
+  border-radius: 40px 40px 40px 40px;
+}
+
+
+
+
+.changePassword .txt_field{
+  position: relative;
+  top: 5%;
+  border-bottom: 2px solid #adadad;
+  margin: 50px 0;
+  margin-left: 30px;
+  margin-right: 30px;
+}
+
+.changePassword .txt_field input{
+  width: 100%;
+  padding:0 5px;
+  height: 40px;
+  font-size: 16px;
+  border: none;
+  background: none;
+  outline: none;
+}
+
+/*Password label*/
+.changePassword .txt_field label{
+  position: absolute;
+  top: 50%;
+  left: 5px;
+  color: #adadad;
+  transform: translateY(-50%);
+  font-size: 16px;
+  pointer-events: none;
+  transition: .4s;
+}
+
+
+.changePassword .txt_field span::before{
+  content: "";
+  position: absolute;
+  top: 54px;
+  left: 0;
+  width: 0%;
+  height: 2px;
+  background: #2691d9;
+  transition: .4s;
+}
+
+
+.changePassword .txt_field input:focus~label,
+.changePassword input:valid ~label{
+  top: -5px;
+  color: #2691d9;
+}
+
+.changePassword .txt_field input:focus~span::before,
+.changePassword input:valid ~span::before{
+  width: 100%;
+}
+
+
+
+.changePassword .change{
+  color: white;
+  position: fixed;
+  top: 50%;
+  right: 34%;
+  width: 10%;
+  background: #2691d9;
+  border-radius: 40px 40px 40px 40px;
+}
+
+.changePassword .change_txt{
+  color: white;
+  font-size: 30px;
+}
+.changePassword .change:hover{
+  border-color: #ea7609;
+  border-width: 10px;
+  background: #ea7609;
+  transition: .5s;
+}
+
+.changePassword .cancel{
+  color: white;
+  position: fixed;
+  top: 50%;
+  left: 34%;
+  width: 10%;
+  background: #2691d9;
+  border-radius: 40px 40px 40px 40px;
+}
+
+.changePassword .cancel_txt{
+  color: white;
+  font-size: 30px;
+}
+
+
+.changePassword .cancel_txt:hover{
+  border-radius: 40px 40px 40px 40px;
+  border-color: #ea7609;
+  border-width: 10px;
+  background: #ea7609;
+  transition: .5s;
+}
+/*ChangePassword WINDOW*/
