new Design via angular/material and test login system via material forms

--- a/frontend/src/lib/survey-question/survey-question.component.html
+++ b/frontend/src/lib/survey-question/survey-question.component.html
@@ -20,10 +20,9 @@
     </ul>
   </div>
   <div class="customAnswer" *ngIf="this.question.individualAnswer!=undefined">
-    <input
-      type="text"
-      (change)="setAnswer($event)"
-      >
+    <mat-form-field>
+      <input matInput placeholder="Your Answer" formControlName="customAnswer">
+    </mat-form-field>
   </div>
 
 
