Updated surveyUI (no javascript)

--- a/frontend/src/lib/router/survey/survey.component.html
+++ b/frontend/src/lib/router/survey/survey.component.html
@@ -12,4 +12,7 @@
   </ul>
 </div>
 
-<div id="submitButton" (click)="submitSurvey()">Submit</div>
+  <div id="submitButton">
+    <button mat-flat-button color="primary" (click)="submitSurvey()">Submit</button>
+  </div>
+
