--- a/frontend/src/custom-theme.scss
+++ b/frontend/src/custom-theme.scss
@@ -7,7 +7,15 @@
 // Include the common styles for Angular Material. We include this here so that you only
 // have to load a single css file for Angular Material in your app.
 // Be sure that you only ever include this mixin once!
-@include mat.core();
+@import '~@angular/material/theming';
+@include mat-core();
+
+  $primary: mat-palette($mat-blue,200);
+  $accent: mat-palette($mat-orange,200);
+
+  $theme: mat-light-theme($primary, $accent);
+
+@include angular-material-theme($theme);
 
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
