--- a/frontend/src/custom-theme.scss
+++ b/frontend/src/custom-theme.scss
@@ -17,11 +17,46 @@
 
 @include angular-material-theme($theme);
 
+$mat-myapp-primary: (
+    50 : #e5f2fa,
+    100 : #bedef4,
+    200 : #93c8ec,
+    300 : #67b2e4,
+    400 : #47a2df,
+    500 : #2691d9,
+    600 : #2289d5,
+    700 : #1c7ecf,
+    800 : #1774ca,
+    900 : #0d62c0,
+    A100 : #edf5ff,
+    A200 : #bad8ff,
+    A400 : #87bbff,
+    A700 : #6eacff,
+    contrast: (
+        50 : #000000,
+        100 : #000000,
+        200 : #000000,
+        300 : #000000,
+        400 : #000000,
+        500 : #ffffff,
+        600 : #ffffff,
+        700 : #ffffff,
+        800 : #ffffff,
+        900 : #ffffff,
+        A100 : #000000,
+        A200 : #000000,
+        A400 : #000000,
+        A700 : #000000,
+    )
+);
+
+
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
-// hue. Available color palettes: https://material.io/design/color/
-$frontend-primary: mat.define-palette(mat.$indigo-palette);
-$frontend-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
+// hue. Available color palettes: https://material.io/design/color/ZZZ
+$frontend-primary: mat.define-palette($mat-myapp-primary);
+$frontend-accent: mat.define-palette($mat-myapp-primary);
+//$frontend-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
 
 // The warn palette is optional (defaults to red).
 $frontend-warn: mat.define-palette(mat.$red-palette);
